--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.57"
+derive_more = "0.99.17"
 rand = "0.8.5"
+rmp-serde = "1.1.1"
+serde = { version = "1.0.145", features = ["derive"] }
 thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["full"] }
+tracing = "0.1.37"
