--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ derive_more = "0.99.17"
 rand = "0.8.5"
 rmp-serde = "1.1.1"
 serde = { version = "1.0.145", features = ["derive"] }
+serde_json = "1.0.87"
 thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["full"] }
 tracing = "0.1.37"
