--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-trait = "0.1.57"
 clap = { version = "3", features = ["derive"] }
 derive_more = "0.99.17"
+futures = { version = "0.3.25", default-features = false, features = ["std"] }
 pin-project = "1.0.12"
 rand = "0.8.5"
 rmp-serde = "1.1.1"
